--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,25 @@
 
 
 {  
+name:"พลิกแผนลับลวงระทึก (2025)",
+image:"https://img.inwiptv.net/postor/20250430152403qWTfHG8KdXwr0bqypYbNZLenh0J.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Exterritorial_2025/Exterritorial_2025_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+ 
+{  
 name:"ฝ่าหายนะครองเมือง (2025)",
 image:"https://img.inwiptv.net/postor/20250425163256bEiJBcwdR4oOTCgstLkqTUja58p.jpg",
 url:"https://m1free.inwstream.com:1936/movie4/Havoc_2025/Havoc_2025_TH_1080p.mp4/chunk.m3u8",
