--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,25 @@
 
 
 {  
+name:"แรงทะลุกระสุน 3(2025)",
+image:"https://img.inwiptv.net/postor/20250507150323gO33EBU7JHd6xBjT62XMt61KoqX.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Last_Bullet_2025/Last_Bullet_2025_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+ 
+{  
 name:"Thunderbolts* ธันเดอร์โบลต์ส* (2025)",
 image:"https://img.inwiptv.net/postor/20250502185843hBH50Mkcrc4m8x73CovLmY7vBx1.jpg",
 url:"https://m1free.inwstream.com:1936/movie4/Thunderbolts_2025/Thunderbolts_2025_thr_v1.mp4/chunk.m3u8",
