--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,27 +11,9 @@
 
  
 {  
-name:"Thunderbolts* ธันเดอร์โบลต์ส* (2025)",
-image:"https://img.inwiptv.net/postor/20250502185843hBH50Mkcrc4m8x73CovLmY7vBx1.jpg",
-url:"https://m1free.inwstream.com:1936/movie4/Thunderbolts_2025/Thunderbolts_2025_thr_v1.mp4/chunk.m3u8",
-"referer": "https://www.123-hd.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
-
-
-
-
-
-
-
-
-
- 
-{  
-name:"พลิกแผนลับลวงระทึก (2025)",
-image:"https://img.inwiptv.net/postor/20250430152403qWTfHG8KdXwr0bqypYbNZLenh0J.jpg",
-url:"https://m1free.inwstream.com:1936/movie4/Exterritorial_2025/Exterritorial_2025_TH_1080p.mp4/chunk.m3u8",
+name:"ฝ่านรกกองโจร (2025)",
+image:"https://img.inwiptv.net/postor/2025022817023538I76hGcFY6xB47pjm7pZwkfuAF.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Counterattack_2025/Counterattack_2025_TH_1080p.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
