--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,6 +8,21 @@
 
 
 {  
+name:"START-326 เรย์ คามิกิ",
+image:"https://fourhoi.com/start-326/cover-n.jpg",
+url:"https://surrit.com/e76d6285-07d9-494f-81c5-a4354ee65a31/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
 name:"OFJE-511 คาเอเดะ ฟูอา",
 image:"https://fourhoi.com/ofje-511/cover-n.jpg",
 url:"https://surrit.com/a846740b-1102-4b8e-b617-a9c377ffcd4d/1080p/video.m3u8",
