--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,6 +9,60 @@
 
 
 
+
+{  
+name:"Inside Man: Most Wanted (2019)",
+image:"https://img.inwiptv.net/postor/20191029151720inside-man-most-wanted-5d7fda41ac11e.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Inside_Man_Most_Wanted_2019/Inside_Man_Most_Wanted_2019_TH_1080p.m4v/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+ 
+{  
+name:"ตำรวจระห่ำพล่านเขย่าเมือง (2009)",
+image:"https://img.inwiptv.net/postor/20200105205817brooklyns-finest-522e1035ae380.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Brooklyn_s_Finest_2009/Brooklyn_s_Finest_2009_TH_1080p.m4v/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Dead Trigger (2017)",
+image:"https://img.inwiptv.net/postor/20200111220905MV5BNjE3ODg5ZGYtYmM3Mi00MDQwLTg1OTMtYmUzNjY4N2FiZjBhXkEyXkFqcGdeQXVyMjI4MjA3NDY@._V1_SY1000_CR0,0,706,1000_AL_.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Dead_Trigger_2017/Dead_Trigger_2017_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
  
 {  
 name:"Kill Bill Vol. 1 (2003) นางฟ้าซามูไร",
