--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -3,7 +3,7 @@
 "author": "[บ้านคูณคำมี <อัพเดท:21.04.2568:12.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
-"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:21.04.2568:12.00>]",
+"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:30.04.2568:12.00>]",
 
 "groups": [
 
@@ -23,7 +23,7 @@
 {
 "name": "Movie <โรงหนังของแล้ม>",
 "author": "Nexter",
-"image": "https://leam.tech/assets/navbar/logo.png",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/leam.png",
 "imageScale": "fitStart",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter%20Moviees.html",
 "import": "true"
