--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -24,7 +24,7 @@
 "name": "Movie <โรงหนังของแล้ม>",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/leam.png",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter%20Moviees.html",
 "import": "true"
 },
