--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -7,6 +7,21 @@
 
 
 
+{  
+name:"SONE-762 ริริ นานาสึโมริ",
+image:"https://fourhoi.com/sone-762/cover-n.jpg",
+url:"https://surrit.com/2f4956ea-906c-4adc-8195-ffe2f72e9360/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
 
 {  
 name:"DASS-630 แมรี่ ทาจิบานะ",
