--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,6 +8,36 @@
 
 
 {  
+name:"PRED-763 Karen Kaede",
+image:"https://fourhoi.com/pred-763/cover-n.jpg",
+url:"https://surrit.com/80ad339e-2a36-4d07-bf33-b826a55b8447/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"MXGS-1382 YuiHatano",
+image:"https://fourhoi.com/mxgs-1382/cover-n.jpg",
+url:"https://surrit.com/1c933c7e-247f-42fc-a074-1b740649a16e/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
 name:"SONE-762 ริริ นานาสึโมริ",
 image:"https://fourhoi.com/sone-762/cover-n.jpg",
 url:"https://surrit.com/2f4956ea-906c-4adc-8195-ffe2f72e9360/720p/video.m3u8",
